--- a/index.html
+++ b/index.html
@@ -1,52 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bootstrap Basics</title>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="app.css">
+    <title>Bootstrap Grid Exercise</title>
+    <!--INCLUDING BOOTSTRAP-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
 </head>
-
 <body>
-    <div class="container-fluid">
-        <h1 class="display-1 text-center text-primary">Grid system example</h1>
-        <div class="row">
-            <div class="col-4 bg-success">I am 4 units</div>
-            <div class="col-4 bg-danger">I am 4 units</div>
-            <div class="col-4 bg-warning">I am 4 units</div>
-        </div>
-        <div class="row">
-            <div class="col-2 bg-success">I am 2 units</div>
-            <div class="col-8 bg-danger">I am 8 units</div>
-            <div class="col-2 bg-warning">I am 2 units</div>
-        </div>
-        <div class="container-fluid">
-
-            <div class="row">
-                <div class="col bg-success">I am even units</div>
-                <div class="col bg-danger">I am even units</div>
-                <div class="col bg-warning">I am even units</div>
-            </div>
-        </div>
-    </div>
+    
     <div class="container">
-        
+        <div class="row">
+            <div class="col-4 bg-danger">One third</div>
+            <div class="col-8 bg-info">Two thirds</div>
+        </div>
+        <div class="row">
+            <div class="col-3 bg-warning">One Quarter</div>
+            <div class="col-6 bg-primary">One Half</div>
+            <div class="col-3 bg-warning">One Quarter</div>
+        </div>
     </div>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI"
-        crossorigin="anonymous"></script>
 </body>
-
 </html>
